Modified Gradle Files (Project and app) for Firebase implementation Modified AndroidManifest.xml to check permissions for internet access and location services Added google-services.json (Firebase) StartupActivity - Created Login / Account Creation using Firebase - Added in Forget password function activity_startup.xml - made forgotPWPB_Text clickable README.md - added email

--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -67,6 +67,8 @@
         android:text="@string/forgotPWPB_Text"
         android:textStyle="italic"
         android:typeface="normal"
+        android:clickable="true"
+        android:onClick="ForgotPasswordClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
