--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,45 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/textView2"
+    <ImageView
+        android:id="@+id/alert_Bar"
+        android:layout_width="377dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_alertbar" />
+
+    <ImageView
+        android:id="@+id/alert_Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Home Activity"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/home_Icon"
-        android:layout_width="67dp"
-        android:layout_height="75dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/ic_home_foreground" />
-
-    <ImageView
-        android:id="@+id/gps_Icon"
-        android:layout_width="67dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginRight="88dp"
-        android:onClick="onGPSClick"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/home_Icon"
-        app:srcCompat="@mipmap/ic_gps_foreground" />
-
-    <ImageView
-        android:id="@+id/settings_Icon"
-        android:layout_width="67dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginLeft="88dp"
-        android:onClick="onSettingsClick"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/home_Icon"
-        app:srcCompat="@mipmap/ic_settings_foreground" />
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/alert_Bar"
+        app:layout_constraintTop_toTopOf="@+id/alert_Bar"
+        app:srcCompat="@drawable/ic_error_black_24dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
