--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,6 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
+    <ImageView
+        android:id="@+id/home_PB2"
+        android:layout_width="55dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_home_normal_24dp" />
+
+    <ImageView
+        android:id="@+id/map_PB2"
+        android:layout_width="55dp"
+        android:layout_height="52dp"
+        app:layout_constraintBottom_toBottomOf="@+id/home_PB2"
+        app:layout_constraintEnd_toStartOf="@+id/home_PB2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_map_normal_24dp" />
+
+    <ImageView
+        android:id="@+id/settings_PB2"
+        android:layout_width="55dp"
+        android:layout_height="52dp"
+        app:layout_constraintBottom_toBottomOf="@+id/home_PB2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/home_PB2"
+        app:srcCompat="@drawable/ic_settings_normal_24dp" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
