--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -1,20 +1,24 @@
 <resources>
     <!--
-    TODO: Before you release your application, you need a Google Maps API key.
+    TODO: Before you run your application, you need a Google Maps API key.
 
-    To do this, you can either add your release key credentials to your existing
-    key, or create a new key.
+    To get one, follow this link, follow the directions and press "Create" at the end:
 
-    Note that this file specifies the API key for the release build target.
-    If you have previously set up a key for the debug target with the debug signing certificate,
-    you will also need to set up a key for your release certificate.
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=3E:9B:B6:62:FE:AC:2D:9D:8C:AB:38:C3:BA:A0:47:2C:23:79:F6:9E%3BCS7455.Team5.dashyy
 
-    Follow the directions here:
+    You can also add your credentials to an existing key, using these values:
 
-    https://developers.google.com/maps/documentation/android/signup
+    Package name:
+    CS7455.Team5.dashyy
+
+    SHA-1 certificate fingerprint:
+    3E:9B:B6:62:FE:AC:2D:9D:8C:AB:38:C3:BA:A0:47:2C:23:79:F6:9E
+
+    Alternatively, follow the directions here:
+    https://developers.google.com/maps/documentation/android/start#get-key
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB-oevdr8TG7O-9LPqml5kto_aG1LBG7fw</string>
 </resources>
