--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -94,6 +94,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="160dp"
                 android:text="TRACK"
+                android:onClick="childOneMaps_PB_onClick"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/childOneName_TV" />
 
