--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,155 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <ImageView
-        android:id="@+id/alert_Bar"
-        android:layout_width="377dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_alertbar" />
-
-    <ImageView
-        android:id="@+id/alert_Icon"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/MainLinLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintStart_toStartOf="@+id/alert_Bar"
-        app:layout_constraintTop_toTopOf="@+id/alert_Bar"
-        app:srcCompat="@drawable/ic_error_black_24dp" />
+        android:layout_gravity="bottom|center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/alertText_TV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="No active alerts."
-        app:layout_constraintStart_toEndOf="@+id/alert_Icon"
-        app:layout_constraintTop_toTopOf="@+id/alert_Bar" />
-
-    <ScrollView
-        android:id="@+id/main_ScrollView"
-        android:layout_width="409dp"
-        android:layout_height="604dp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alert_Bar">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:menu="@menu/bottom_navigation_menu" />
+    </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/childContainer1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_childcontainer" />
-
-            <TextView
-                android:id="@+id/childOneName_TV"
-                android:layout_width="199dp"
-                android:layout_height="23dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="28dp"
-                android:text="TextView"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/childContainer1"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/childOneDetail_TV"
-                android:layout_width="165dp"
-                android:layout_height="131dp"
-                android:layout_marginTop="16dp"
-                android:text="TextView"
-                app:layout_constraintStart_toEndOf="@+id/childOneName_TV"
-                app:layout_constraintTop_toBottomOf="@+id/childOneName_TV" />
-
-            <Button
-                android:id="@+id/childOneMaps_PB"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="160dp"
-                android:layout_height="34dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="160dp"
-                android:text="TRACK"
-                android:onClick="childOneMaps_PB_onClick"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/childOneName_TV" />
-
-            <Button
-                android:id="@+id/childOneConfigure_PB"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="160dp"
-                android:layout_height="34dp"
-                android:layout_marginStart="44dp"
-                android:layout_marginLeft="44dp"
-                android:text="CONFIGURE"
-                app:layout_constraintStart_toEndOf="@+id/childOneMaps_PB"
-                app:layout_constraintTop_toTopOf="@+id/childOneMaps_PB" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-
-    <ImageView
-        android:id="@+id/bottomNav_Bar"
-        android:layout_width="515dp"
-        android:layout_height="104dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.326"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_bottomnavbar" />
-
-    <ImageView
-        android:id="@+id/home_PB"
-        android:layout_width="55dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_home_normal_24dp" />
-
-    <ImageView
-        android:id="@+id/map_PB"
-        android:layout_width="55dp"
-        android:layout_height="52dp"
-        android:onClick="MapClick"
-        app:layout_constraintBottom_toBottomOf="@+id/home_PB"
-        app:layout_constraintEnd_toStartOf="@+id/home_PB"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_map_normal_24dp" />
-
-    <ImageView
-        android:id="@+id/settings_PB"
-        android:layout_width="55dp"
-        android:layout_height="52dp"
-        app:layout_constraintBottom_toBottomOf="@+id/home_PB"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/home_PB"
-        app:srcCompat="@drawable/ic_settings_normal_24dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
